feat(user): Add user service, middleware and route
